public/common/global.css
/* ... */
.modal-container-hidden {
    opacity: 0;
    pointer-events: none;
}

.modal {
    background-color: var(--primary-bg);
    border-radius: var(--card-radius);
    padding: var(--container-padding);
    box-shadow: var(--card-shadow);
    z-index: 1001;
    display: flex;
    flex-direction: column;
    gap: var(--medium-gap);
    opacity: 1;
    box-sizing: border-box;
    transition: opacity 0.25s, transform 0.15s;
}

.modal-header {
    margin: 0;
}

.modal-controls {
    display: flex;
    gap: var(--small-gap);
}

.modal-hidden {
    opacity: 0;
    transform: scale(0.95);
    pointer-events: none;
}

.grid-container {
    display: flex;
    flex-direction: column;
    border: 1px solid var(--border-dark);
    border-radius: var(--card-radius);
    padding: var(--card-padding);
    gap: var(--small-gap);
}

.team-mini-grid {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: var(--small-gap);
    overflow-y: scroll;
}

#status {
    border-radius: var(--button-radius);
    display: inline;
    padding: 0.1rem 0.5rem;
    text-transform: capitalize;
    font-weight: 400;
}

#status[data-status="planning"] {
    background-color: var(--accent-light);
}

#status[data-status="in progress"] {
    background-color: var(--accent-light);
}

#status[data-status="cancelled"] {
    background-color: var(--error-light);
}

#status[data-status="postponed"] {
    background-color: var(--accent-dark);
    color: var(--primary-bg);
}

#status[data-status="completed"] {
    background-color: var(--success-light);
}

.team-member-picture {
    width: 5rem;
    aspect-ratio: 1;
    object-fit: cover;
    border-radius: var(--circle-radius);
    background-color: var(--border-light);
}

.team-member-details {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-grow: 1;
}

.team-member-medium-details {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex-grow: 1;
    width: 70%;
    color: var(--primary-fg);
}

.team-member-details #full-name {
    font-weight: bold;
    font-size: 1.2rem;
}

#full-name-medium {
    font-weight: bold;
    font-size: 1rem;
}

.team-member[data-role="Manager"] #full-name {
    color:#FFFFFF;
}

.team-member-details #role {
    font-size: 0.8rem;
}

.team-member[data-role="Manager"] #role {
    color:#FFFFFF;
}

.team-member-details #contact-no {
    font-size: 0.8rem;
}

#contact-no-medium {
    font-size: 0.8rem;
}

.team-member[data-role="Manager"] #contact-no {
    color: #FFFFFF;
 
    .event-box-top {
        flex-direction: column;
        align-items: flex-start;
    }
}

.attendance-box {
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 100%;
    background-color: #FFFFFF;
    padding: 30px;
    border-radius: 24px;
    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
    transition: all 0.5s ease;
    overflow: hidden;
    cursor: pointer;
    position: relative;
    margin-bottom: var(--medium-gap);
}

.attendance-button-container {
    display: flex;
    gap: var(--small-gap);
    justify-content: flex-end;
}

#present-button.selected {
    background: none;
    border-color: var(--accent-light);
    background-color: var(--accent-light);
}

#absent-button.selected {
    background: none;
    border-color: var(--accent-light);
    background-color: var(--accent-light);
}


@media screen and (max-width: 800px) {
    * {
        --icon-size: 1.75rem;
        --container-padding: 2rem 1rem;
    }
    
    body {
        flex-direction: column;
        height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
    }

    .page-title-bar {
        padding: 0 var(--medium-gap);
    }

    .global-sidebar {
        position: absolute;
        top: 0;
        left: 0;
        border-radius: 0px;
        z-index: 1000;
        width: 100vw;
        height: 100vh;
        margin: 0;
        opacity: 0;
        transform: scale(0.98);
        pointer-events: none;
        backdrop-filter: blur(20px);
        transition: opacity 0.25s, transform 0.15s;
    }

    .logo-container {
        display: flex;
        justify-content: end;
    }

    .mobile-top-bar {
        width: 100%;
        display: flex;
        justify-content: space-between;
    }

    .mobile-top-bar-button {
        background-color: transparent;
        border: none;
        color: var(--primary-bg);
        font-family: var(--main-font);
        cursor: pointer;
        z-index: 10000;
        padding: var(--medium-gap);
    }

    .button i.lni {
        font-size: var(--icon-size);
    }

    .text-field {
        padding: 1rem;
        font-size: 1rem;
    }

    .mobile-top-bar-button i {
        font-size: var(--icon-size);
    }

    .team-member-mini-picture {
        display: none;
    }

    .form-row {
        flex-direction: column;
    }

    .modal {
        width: 90vw;
    }

    .modal-controls {
        flex-direction: column-reverse;
    }

    .search-bar input {
        font-size: 1rem;
    }

    .team-member-details #contact-no {
        font-size: 0.8rem;
    }

    .team-member-details {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        flex-grow: 1;
    }

    .team-member-card {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
        flex-grow: 1;
        gap: var(--medium-gap);
    }
}

